--- a/package.json
+++ b/package.json
@@ -16,7 +16,14 @@
             "BackgroundColor",
             "ForegroundColor",
             "DotsColor",
-            "WeatherUnit"
+            "WeatherUnit",
+            "WeatherTemp",
+            "WeatherCond",
+            "NameLocation",
+            "DisplayDate",
+            "DisplayTemp",
+            "DisplayLoc",
+            "NameCity"
         ],
         "projectType": "native",
         "resources": {
@@ -24,20 +31,6 @@
                 {
                     "file": "fonts/weatherfontcustom.ttf",
                     "name": "FONT_WICON_22",
-                    "targetPlatforms": null,
-                    "type": "font"
-                },
-                {
-                    "characterRegex": "[0-9]",
-                    "file": "fonts/Gotham Bold.otf",
-                    "name": "FONT_GBOLD_22",
-                    "targetPlatforms": null,
-                    "type": "font"
-                },
-                {
-                    "characterRegex": "[0-9]",
-                    "file": "fonts/Gotham Bold.otf",
-                    "name": "FONT_GBOLD_34",
                     "targetPlatforms": null,
                     "type": "font"
                 },
@@ -50,7 +43,27 @@
                 },
                 {
                     "file": "fonts/Gotham Light.otf",
+                    "name": "FONT_GLIGHT_14",
+                    "targetPlatforms": null,
+                    "type": "font"
+                },
+                {
+                    "file": "fonts/Gotham Light.otf",
                     "name": "FONT_GLIGHT_10",
+                    "targetPlatforms": null,
+                    "type": "font"
+                },
+                {
+                    "characterRegex": "[0-9]",
+                    "file": "fonts/Gotham Bold.otf",
+                    "name": "FONT_GBOLD_34",
+                    "targetPlatforms": null,
+                    "type": "font"
+                },
+                {
+                    "characterRegex": "[0-9]",
+                    "file": "fonts/Gotham Bold.otf",
+                    "name": "FONT_GBOLD_22",
                     "targetPlatforms": null,
                     "type": "font"
                 }
