Last fix on GPS error

--- a/package.json
+++ b/package.json
@@ -26,9 +26,7 @@
             "NameCity",
             "DisplayDots",
             "DisplayBattery",
-            "BatteryColor",
-            "WeatOK",
-            "LocOK"
+            "BatteryColor"
         ],
         "projectType": "native",
         "resources": {
