--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
             "NameCity",
             "DisplayDots",
             "DisplayBattery",
-            "BatteryColor"
+            "BatteryColor",
+            "UpSlider"
         ],
         "projectType": "native",
         "resources": {
