--- a/.travis.yml
+++ b/.travis.yml
@@ -1,28 +1,31 @@
-sudo: false
-language: python
-python:
-  - "2.7"
-
-env:
-  - PEBBLE_SDK_VERSION=3.10.1
-
-before_install:
-  - wget https://s3.amazonaws.com/assets.getpebble.com/pebble-tool/pebble-sdk-4.2.1-linux64.tar.bz2
-  - mkdir -p ~/.pebble-sdk
-  - tar -jxf pebble-sdk-* -C ~/.pebble-sdk
-  - touch ~/.pebble-sdk/ENABLE_ANALYTICS
-  - export PEBBLE_SDK=~/.pebble-sdk/pebble-sdk-*
-  - export PEBBLE=$PEBBLE_SDK/bin/pebble
-
+language: ruby
+sudo: true
 install:
-  - pushd $PEBBLE_SDK
-  - virtualenv --no-site-packages .env
-  - source .env/bin/activate
-  - pip install -r requirements.txt
-  - deactivate
-  - popd
-  - $PEBBLE sdk set-channel beta
-  - yes | $PEBBLE sdk install $PEBBLE_SDK_VERSION
-
-script:
-  - $PEBBLE build
+- scripts/travis.sh
+- export PATH=$PATH:~/pebble-dev/$PEBBLE_SDK/bin
+script: make travis
+cache:
+  directories:
+  - screenshots
+  - "$HOME/pebble-dev"
+  - "$HOME/.cache/pip/"
+addons:
+  artifacts:
+    paths: ./screenshots
+    s3_region: eu-west-1
+    bucket: minimalin
+    debug: true
+  apt:
+    packages:
+    - ssmtp
+    - mutt
+    - python2.7-dev
+    - python-pip
+    - python-virtualenv
+    - libsdl1.2debian
+    - libfdt1
+    - libpixman-1-0
+env:  
+  global:
+    - ARTIFACTS_BUCKET=minimalin
+    - PEBBLE_SDK=pebble-sdk-4.5-linux64 PEBBLE_PROJECT_PATH=dieghernan/sfera
