--- a/.travis.yml
+++ b/.travis.yml
@@ -1,33 +1,14 @@
-sudo: true
-
-language: python
-python:
- - 2.7.11
-
-language: node_js
-node_js:
- - node
-
+language: pebblec
+sudo: false
+before_script: bash ./before_install.sh
+script: bash ./build.sh
+cache:
+  directories:
+    - $HOME/pebble-dev
+    - $HOME/.cache/pip
 addons:
   apt:
-    sources:
-      - libsdl1.2debian
-      - libfdt1
-      - libpixman-1-0
-
-before_install:
- - sudo pip install virtualenv
- - chmod +x ./travis/install
-install: ./travis/install
-
-before_script:
- - chmod +x ./travis/build
-script: ./travis/build
-
-env:
-  global:
-    - PEBBLE_TOOL=4.4.1
-
-branches:
-  only:
-    - master
+    packages:
+    - python2.7-dev
+    - python-pip
+    - python-virtualenv
