--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: ruby
 sudo: true
 install:
-- scripts./before_install.sh
+- before_install.sh
 - export PATH=$PATH:~/pebble-dev/$PEBBLE_SDK/bin
 script: make travis
 cache:
