--- a/.travis.yml
+++ b/.travis.yml
@@ -1,24 +1,14 @@
-language: ruby
-sudo: true
-install:
-- before_install.sh
-- export PATH=$PATH:~/pebble-dev/$PEBBLE_SDK/bin
-script: make travis
+language: pebblec
+sudo: false
+before_script: bash ./before_install.sh
+script: bash ./build.sh
 cache:
   directories:
-  - "$HOME/pebble-dev"
-  - "$HOME/.cache/pip/"
+    - $HOME/pebble-dev
+    - $HOME/.cache/pip
 addons:
   apt:
     packages:
-    - ssmtp
-    - mutt
     - python2.7-dev
     - python-pip
     - python-virtualenv
-    - libsdl1.2debian
-    - libfdt1
-    - libpixman-1-0
-env:  
-  global:
-    - PEBBLE_SDK=pebble-sdk-4.5-linux64 PEBBLE_PROJECT_PATH=dieghernan/Sfera
