NIght mode working

--- a/package.json
+++ b/package.json
@@ -27,7 +27,14 @@
             "DisplayDots",
             "DisplayBattery",
             "BatteryColor",
-            "UpSlider"
+            "UpSlider",
+            "NightTheme",
+            "BackgroundColorNight",
+            "ForegroundColorNight",
+            "DotsColorNight",
+            "BatteryColorNight",
+            "HourSunset",
+            "HourSunrise"
         ],
         "projectType": "native",
         "resources": {
@@ -96,5 +103,5 @@
             "watchface": true
         }
     },
-    "version": "1.1.0"
+    "version": "2.0.0"
 }
