--- a/package.json
+++ b/package.json
@@ -36,17 +36,17 @@
             "HourSunrise",
             "WeatherProv",
             "EmailPMKEY",
-            "PINPMKEY"
+            "PINPMKEY",
+            "APIKEY_User",
+            "ClockMode",
+            "HourColor",
+            "MinColor",
+            "HourColorNight",
+            "MinColorNight"
         ],
         "projectType": "native",
         "resources": {
             "media": [
-                {
-                    "file": "fonts/weatherfontcustom2.ttf",
-                    "name": "FONT_WICON_22",
-                    "targetPlatforms": null,
-                    "type": "font"
-                },
                 {
                     "file": "images/sfera.png",
                     "menuIcon": true,
@@ -55,15 +55,8 @@
                     "type": "bitmap"
                 },
                 {
-                    "characterRegex": "[0-9 a-z A-Z]",
-                    "file": "fonts/Gotham Light.otf",
-                    "name": "FONT_GLIGHT_12",
-                    "targetPlatforms": null,
-                    "type": "font"
-                },
-                {
-                    "file": "fonts/Gotham Light.otf",
-                    "name": "FONT_GLIGHT_14",
+                    "file": "fonts/weatherfontcustom2.ttf",
+                    "name": "FONT_WICON_22",
                     "targetPlatforms": null,
                     "type": "font"
                 },
@@ -74,9 +67,15 @@
                     "type": "font"
                 },
                 {
-                    "characterRegex": "[0-9]",
-                    "file": "fonts/Gotham Bold.otf",
-                    "name": "FONT_GBOLD_34",
+                    "file": "fonts/Gotham Light.otf",
+                    "name": "FONT_GLIGHT_14",
+                    "targetPlatforms": null,
+                    "type": "font"
+                },
+                {
+                    "characterRegex": "[0-9 a-z A-Z]",
+                    "file": "fonts/Gotham Light.otf",
+                    "name": "FONT_GLIGHT_12",
                     "targetPlatforms": null,
                     "type": "font"
                 },
@@ -84,6 +83,13 @@
                     "characterRegex": "[0-9]",
                     "file": "fonts/Gotham Bold.otf",
                     "name": "FONT_GBOLD_22",
+                    "targetPlatforms": null,
+                    "type": "font"
+                },
+                {
+                    "characterRegex": "[0-9]",
+                    "file": "fonts/Gotham Bold.otf",
+                    "name": "FONT_GBOLD_34",
                     "targetPlatforms": null,
                     "type": "font"
                 },
@@ -105,5 +111,5 @@
             "watchface": true
         }
     },
-    "version": "3.0.0"
+    "version": "4.0.0"
 }
