--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
         "pebble-clay": "^1.0.3"
     },
     "keywords": [],
-    "name": "sfera",
+    "name": "sferafixv6",
     "pebble": {
         "capabilities": [
             "location",
             "configurable"
         ],
-        "displayName": "Sfera",
+        "displayName": "Sferafixv6",
         "enableMultiJS": true,
         "messageKeys": [
             "BackgroundColor",
@@ -61,9 +61,8 @@
                     "type": "font"
                 },
                 {
-                    "characterRegex": "[0-9 a-z A-Z]",
                     "file": "fonts/Gotham Light.otf",
-                    "name": "FONT_GLIGHT_12",
+                    "name": "FONT_GLIGHT_10",
                     "targetPlatforms": null,
                     "type": "font"
                 },
@@ -74,15 +73,9 @@
                     "type": "font"
                 },
                 {
+                    "characterRegex": "[0-9 a-z A-Z]",
                     "file": "fonts/Gotham Light.otf",
-                    "name": "FONT_GLIGHT_10",
-                    "targetPlatforms": null,
-                    "type": "font"
-                },
-                {
-                    "characterRegex": "[0-9:]",
-                    "file": "fonts/Gotham Bold.otf",
-                    "name": "FONT_GBOLD_22",
+                    "name": "FONT_GLIGHT_12",
                     "targetPlatforms": null,
                     "type": "font"
                 },
@@ -90,6 +83,13 @@
                     "characterRegex": "[0-9:]",
                     "file": "fonts/Gotham Bold.otf",
                     "name": "FONT_GBOLD_34",
+                    "targetPlatforms": null,
+                    "type": "font"
+                },
+                {
+                    "characterRegex": "[0-9:]",
+                    "file": "fonts/Gotham Bold.otf",
+                    "name": "FONT_GBOLD_22",
                     "targetPlatforms": null,
                     "type": "font"
                 },
@@ -106,10 +106,10 @@
         "targetPlatforms": [
             "chalk"
         ],
-        "uuid": "be15d828-8605-4bf0-a92c-c1902bdce99d",
+        "uuid": "91ca478a-e3be-479c-b16e-1716e3544196",
         "watchapp": {
             "watchface": true
         }
     },
-    "version": "5.1.0"
+    "version": "6.2.0"
 }
